--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Jordan Bailey</h1>
-					<h2>Systems Administrator</h2>
+					<h2>Systems Engineer</h2>
 				</div>
 
 				<div class="yui-u">
@@ -103,7 +103,30 @@
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
-					<div class="yui-gf">
+
+
+	
+				<div class="yui-gf">
+
+					<div class="yui-u first">
+						<h2>Projects</h2>
+					</div><!--// .yui-u -->
+
+					<div class="yui-u">
+
+						<div class="job">
+							<h2>Cloud Resume Challenge</h2>
+							<h3>GitHub Frontend:<a href="https://github.com/jjbailey1004/resume-front-end">GitHub Repo</a></h3>
+							<h3>GitHub Backend:<a href="https://github.com/jjbailey1004/resume-backend">GitHub Backend</a></h3>
+							<h3>Original Project Link: <a href="https://cloudresumechallenge.dev/instructions/">Resume Challenge by Forrest Brazeal</a></h3>
+							<h4>November 2022</h4>
+							<p>Building a website from the ground up with a view counter database, APIGW, custom domain, HTTPs Security, Serverless Functions triggered through APIGW written in Python, all packaged into Terraform and utilizing Github Actions for CICD.</p>
+						</div>
+
+
+
+					</div><!--// .yui-u -->
+				</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
 	
@@ -115,63 +138,130 @@
 
 							<div class="job">
 								<h2>Big Fish Games</h2>
-								<h3>Systems Administrator</h3>
+								<h3>Systems Engineer</h3>
 								<h4>January 2022 - Present</h4>
-								<p>Guide product teams through adopting IaC and CICD strategies, work with Senior Developers and other Engineers to implement DevOps methodologies. Center of Excellence team member over Google Cloud Platform for the Enterprise. </p>
-								<p>Train DevOps Engineers and new hires for our team in Kubernetes, GCP, Docker, Linux, Terraform, and Center of Excellence standards and practices. </p>
+								<p></p>
 								<ul>
-								<li class="last">- Lead new region IaC and Kubernetes stand-up in Germany for first product offerings in EU</li>
-								<li class="last">- Wrote module for new microservices to abstract Kubernetes Workload Identity/RBAC</li>
-								<li class="last">- Migrated to Terraform managed Kubernetes and wrote new CICD suite to accommodate</li>
-								<li class="last">- Optimized CICD pipelines for speed and efficiency.</li>
+								<li class="last">- Administer Okta applications that have been SAML integrated and customly integrated. Implemented new	push groups that provide access based on roles.	</li>
+								<li class="last">- Lead the Atlassian team and architect solutions based on business needs, including administration.</li>
+								<li class="last">- Project lead and architect for projects surrounding automation of onboarding and offboarding.</li>
+								<li class="last">- Run Agile standups and function as the teams scrummaster.</li>
+								<li class="last">- Automate tasks via Powershell, Python and Okta Workflows.</li>
+								<li class="last">- Troubleshoot provisioning and permissioning problems.</li>
 								</ul>
 							</div>
 
 							<div class="job">
-								<h2>Armor Plumbing</h2>
-								<h3>Commercial/Residential Field Manager</h3>
-								<h4>January 2020 - September 2020</h4>
-								<p>Commercial and Residential plumber responsible for commercial contracts, training new apprentices, maintaining daily operations, alongside everyday service. </p>
+								<h2>Pioneer Valley Books</h2>
+								<h3>Systems Administrator</h3>
+								<h4>May 2021 - January 2022</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Solo IT technician role with 2 locations to support, including a warehouse with warehouse software/ERP.	</li>
+								<li class="last">- Responsible for any hardware, software, networking, security or data backup issues.</li>
+								<li class="last">- Made security recommendations regarding confidentiality and infrastructure hardening.</li>
+								<li class="last">- Deployed and implemented Mosyle MDM and set up security compliance rules.</li>
+								<li class="last">- Install and configure any networking equipment.</li>
+								<li class="last">- When allotted spare time, studied certifications and Python courses. Built scripts in visual basic for
+									automation of warehouse tasks as well as using screen macros to automate onboarding.</li>
+								</ul>
 							</div>
 
 							<div class="job">
-								<h2>R.S Andrews</h2>
-								<h3>Commercial/Residential Plumbing Technician</h3>
-								<h4>November 2016 - January 2020</h4>
-								<p>Residential and Commercial technician in the Metro area, assembled proposals and bids to account for material, labor, and equipment for any largescale jobs.  </p>
+								<h2>BaytechIT</h2>
+								<h3>Project Lead</h3>
+								<h4>September 2020 - May 2021</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Supervise 4 project technician in a 73 location, 500+ device, Windows 10 hardware refresh	</li>
+								<li class="last">- Report back daily on work completed.</li>
+								<li class="last">- Build documentation around processes technicians completed throughout project.</li>
+								<li class="last">- Build out information collection resources via excel and Smartsheet.</li>
+								<li class="last">- Communicate with client executives on a consistent basis.</li>
+								</ul>
 							</div>
 
 							<div class="job">
-								<h2>Custom Construction L.L.C</h2>
-								<h3>Commercial Plumber/Assistant Project Manager</h3>
-								<h4>May 2014 - November 2016</h4>
-								<p>Inspected, removed, and remodeled existing plumbing systems on properties to accommodate new floor plans and layouts for over five largescale metro Atlanta properties, Managed all material purchasing and scheduling for long-term projects, and assisted in basic office duties such as payroll for employees</p>
+								<h2>Epicenter ERP</h2>
+								<h3>Systems Administrator</h3>
+								<h4>July 2020 - September 2020</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Not limited to any role, small team so wearing multiple hats is not optional	</li>
+								<li class="last">- Develop automated solutions to reoccurring problems using PowerShell or Visual Basic.</li>
+								<li class="last">- Troubleshoot level 3 remote tickets, including database refreshes, design architecture for new clients, deploy
+									infrastructure though virtual machines.</li>
+								<li class="last">- Deploy non-industry standard software with little documentation.</li>
+								<li class="last">- Rely heavily on calculated trial and error troubleshooting, while documenting said processes.</li>
+								</ul>
 							</div>
+
+							<div class="job">
+								<h2>BaytechIT</h2>
+								<h3>Field Services Technician</h3>
+								<h4>November 2018 - July 2020</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Intake tickets through Field Services queue in ServiceNow ticketing system.</li>
+								<li class="last">- Reach out to users to initially scope the ticket to determine whether the solution could be provided remotely.</li>
+								<li class="last">- Troubleshoot level 2 remote tickets, hardware including mobile carts as well as network and software issues.</li>
+								<li class="last">- Support and travel to health-based client, and large hospitals.</li>
+								<li class="last">- Work directly with desktop and software engineers to troubleshoot in remote environments.
+								</li>
+								</ul>
+							</div>
+
+							<div class="job">
+								<h2>Paragus IT</h2>
+								<h3>Client Support Engineer</h3>
+								<h4>November 2017 - August 2018</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Collected tickets in my skill level daily.</li>
+								<li class="last">- Went from very green technician to extremely experienced in troubleshooting and time management.</li>
+								<li class="last">- Serviced clients in many industries like eye care, dental, construction, manufacturing, finance, non-profit,
+									HVAC and countless more.</li>
+								<li class="last"> - Worked heavily with Active Directory, Office 365 Management, MS Exchange, Printer Management, Group
+									Policy, MacOS and Windows OS, PC Deployment.</li>
+								<li class="last">- Troubleshot proprietary software.</li>
+								<li class="last">- Built documentation around unknown areas for others to easily comprehend and apply.</li>
+								</ul>
+							</div>
+
+							<div class="job">
+								<h2>Azaya IT</h2>
+								<h3>Helpdesk Technician</h3>
+								<h4>April 2017 - August 2017</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Introduced to client based business and learned customer relations.</li>
+								<li class="last">- Provided support remotely and on-site.</li>
+								<li class="last">- Deep troubleshooting skills.</li>
+								<li class="last"> - Cemented knowledge of running an effective network, including auditing skills.</li>
+								<li class="last">- Introduced to ticketing system with workflow rules, SLAs, etc.</li>
+								</ul>
+							</div>
+
+							<div class="job">
+								<h2>Karl Storz</h2>
+								<h3>Helpdesk Technician</h3>
+								<h4>September 2016 - March 2017</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Provided desk-side and remote support to end-users having issues with hardware and software.</li>
+								<li class="last">- Recorded and received inventory assets and worked closely with asset management.</li>
+								<li class="last">- Front-runner for multiple important projects.</li>
+								<li class="last"> - Deployed & imaged workstations for refreshes and onboardings.</li>
+								<li class="last">- Established end-user training documentation.</li>
+								</ul>
+							</div>
+
 
 
 
 						</div><!--// .yui-u -->
 					</div><!--// .yui-gf -->
 
-												<div class="yui-u first">
-							<h2>Projects</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u">
-
-							<div class="job">
-								<h2>Cloud Resume Challenge</h2>
-								<h3>GitHub:<a href="https://github.com/daniels1996/CloudResumeChallenge">GitHub Repo</a></h3>
-								<h3>Blog Post: <a href="https://dev.to/daniels1996/plumber-s-guide-to-cloud-88">A Plumber's guide to Cloud!</a></h3>
-								<h3>Original Project Link: <a href="https://cloudresumechallenge.dev/instructions/">Resume Challenge by Forrest Brazeal</a></h3>
-								<h4>July 2020</h4>
-								<p>Building a website from the ground up with a database, APIGW, custom domain, HTTPs Security, Serverless Functions triggered through APIGW written in Python, all packaged into a SAM template only utilizing Amazon's wide variety of Cloud services.</p>
-							</div>
-
-
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
 
 					
 
