update html again

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Licensing</h2>
+							<h2>Certifications</h2>
 						</div>
 						<div class="yui-u">
 
