--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 						<h3>Chicopee, MA</h3>
 						<h3><a href="mailto:jjbailey1004@gmail.com">Email Me</a></h3>
 						<h3><a href="https://www.linkedin.com/in/jordan-bailey-6968b0b5/">LinkedIn Profile</a></h3>
-						<h3> <a href="" target="_blank">Download My Resume</a></h3>
-						<h3>(413)-887-1755</h3>
+						<h3>(413)887-1755</h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -142,10 +141,10 @@
 								<h4>January 2022 - Present</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Administer Okta applications that have been SAML integrated and customly integrated. Implemented new	push groups that provide access based on roles.	</li>
-								<li class="last">- Lead the Atlassian team and architect solutions based on business needs, including administration.</li>
-								<li class="last">- Project lead and architect for projects surrounding automation of onboarding and offboarding.</li>
-								<li class="last">- Run Agile standups and function as the teams scrummaster.</li>
+								<li class="last">- Administer Okta applications that have been SAML integrated and custom integrated. Implemented new push groups that provide access based on roles.	</li>
+								<li class="last">- Led the Atlassian team and architect solutions based on business needs, including administration.</li>
+								<li class="last">- Project lead and architect for projects surrounding automation of onboarding and offboarding reducing onboarding turnaround time from 5 days to as little as the same day.</li>
+								<li class="last">- Run Agile standups and function as the team's ScrumMaster.</li>
 								<li class="last">- Automate tasks via Powershell, Python and Okta Workflows.</li>
 								<li class="last">- Troubleshoot provisioning and permissioning problems.</li>
 								</ul>
@@ -271,7 +270,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jordan Bailey &mdash; <a href="mailto:jjbailey1004@gmail.com">jjbailey1004@gmail.com</a> &mdash; (413)-887-1755</p>
+			<p>Jordan Bailey &mdash; <a href="mailto:jjbailey1004@gmail.com">jjbailey1004@gmail.com</a> &mdash; (413)887-1755</p>
 			<p>You are visitor number <a id='count'></a> </p>
 		</div><!--// footer -->
 
