--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<ul class="talent">
 								<li>Kubernetes</li>
 								<li>Cloud Run</li>
-								<li>Firebase</li>
+								<li>Okta</li>
 							</ul>
 
 							<ul class="talent">
@@ -141,12 +141,12 @@
 								<h4>January 2022 - Present</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Administer Okta applications that have been SAML integrated and custom integrated. Implemented new push groups that provide access based on roles.	</li>
-								<li class="last">- Led the Atlassian team and architect solutions based on business needs, including administration.</li>
-								<li class="last">- Project lead and architect for projects surrounding automation of onboarding and offboarding reducing onboarding turnaround time from 5 days to as little as the same day.</li>
-								<li class="last">- Run Agile standups and function as the team's ScrumMaster.</li>
-								<li class="last">- Automate tasks via Powershell, Python and Okta Workflows.</li>
-								<li class="last">- Troubleshoot provisioning and permissioning problems.</li>
+								<li class="last">- Okta application owner for SAML-integrated and custom integrated apps.</li>
+								<li class="last">- Led the Atlassian governance program and architected solutions based on business requirements.</li>
+								<li class="last">- Project lead and architect for automating the onboarding and offboarding process, reduced onboarding turnaround time from 5 days to same day.</li>
+								<li class="last">- ScrumMaster for daily Agile standups.</li>
+								<li class="last">- Reduced toil and automated solutions via Powershell, Python, and Okta Workflows.</li>
+								<li class="last">- Troubleshooted daily tickets focused on AD account provisioning and Okta permissioning problems.</li>
 								</ul>
 							</div>
 
@@ -172,10 +172,9 @@
 								<h4>September 2020 - May 2021</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Supervise 4 project technician in a 73 location, 500+ device, Windows 10 hardware refresh	</li>
-								<li class="last">- Report back daily on work completed.</li>
-								<li class="last">- Build documentation around processes technicians completed throughout project.</li>
-								<li class="last">- Build out information collection resources via excel and Smartsheet.</li>
+								<li class="last">- Led hardware refresh project with four hardware technicians in 73 locations and 500+ devices.</li>
+								<li class="last">- Built documentation and trained technicians.</li>
+								<li class="last">- Build out information collection forms via Excel and Smartsheet.</li>
 								<li class="last">- Communicate with client executives on a consistent basis.</li>
 								</ul>
 							</div>
@@ -186,12 +185,11 @@
 								<h4>July 2020 - September 2020</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Not limited to any role, small team so wearing multiple hats is not optional	</li>
-								<li class="last">- Develop automated solutions to reoccurring problems using PowerShell or Visual Basic.</li>
-								<li class="last">- Troubleshoot level 3 remote tickets, including database refreshes, design architecture for new clients, deploy
-									infrastructure though virtual machines.</li>
-								<li class="last">- Deploy non-industry standard software with little documentation.</li>
-								<li class="last">- Rely heavily on calculated trial and error troubleshooting, while documenting said processes.</li>
+								<li class="last">- Tier 3 support and triage.</li>
+								<li class="last">- Performed MS-SQL database refreshes.</li>
+								<li class="last">- Developed automated solutions to reoccurring problems using PowerShell or Visual Basic.</li>
+								<li class="last">-Executed routine audits of monitoring software, Datadog.</li>
+								<li class="last">- Deployed non-industry standard software with little documentation.</li>
 								</ul>
 							</div>
 
@@ -201,9 +199,10 @@
 								<h4>November 2018 - July 2020</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Intake tickets through Field Services queue in ServiceNow ticketing system.</li>
-								<li class="last">- Reach out to users to initially scope the ticket to determine whether the solution could be provided remotely.</li>
+								<li class="last">- Desktop support tickets through Field Services queue in ServiceNow ticketing system.</li>
+								<li class="last">- Communicated with hospital staff to understand the scope/requirements to determine whether the solution could be provided remotely.</li>
 								<li class="last">- Troubleshoot level 2 remote tickets, hardware including mobile carts as well as network and software issues.</li>
+								<li class="last">- Responsible for supporting 25 locations and 2000+ employee’s hardware/software systems.</li>
 								<li class="last">- Support and travel to health-based client, and large hospitals.</li>
 								<li class="last">- Work directly with desktop and software engineers to troubleshoot in remote environments.
 								</li>
@@ -214,45 +213,18 @@
 								<h2>Paragus IT</h2>
 								<h3>Client Support Engineer</h3>
 								<h4>November 2017 - August 2018</h4>
-								<p></p>
-								<ul>
-								<li class="last">- Collected tickets in my skill level daily.</li>
-								<li class="last">- Went from very green technician to extremely experienced in troubleshooting and time management.</li>
-								<li class="last">- Serviced clients in many industries like eye care, dental, construction, manufacturing, finance, non-profit,
-									HVAC and countless more.</li>
-								<li class="last"> - Worked heavily with Active Directory, Office 365 Management, MS Exchange, Printer Management, Group
-									Policy, MacOS and Windows OS, PC Deployment.</li>
-								<li class="last">- Troubleshot proprietary software.</li>
-								<li class="last">- Built documentation around unknown areas for others to easily comprehend and apply.</li>
-								</ul>
 							</div>
 
 							<div class="job">
 								<h2>Azaya IT</h2>
 								<h3>Helpdesk Technician</h3>
 								<h4>April 2017 - August 2017</h4>
-								<p></p>
-								<ul>
-								<li class="last">- Introduced to client based business and learned customer relations.</li>
-								<li class="last">- Provided support remotely and on-site.</li>
-								<li class="last">- Deep troubleshooting skills.</li>
-								<li class="last"> - Cemented knowledge of running an effective network, including auditing skills.</li>
-								<li class="last">- Introduced to ticketing system with workflow rules, SLAs, etc.</li>
-								</ul>
 							</div>
 
 							<div class="job">
 								<h2>Karl Storz</h2>
 								<h3>Helpdesk Technician</h3>
 								<h4>September 2016 - March 2017</h4>
-								<p></p>
-								<ul>
-								<li class="last">- Provided desk-side and remote support to end-users having issues with hardware and software.</li>
-								<li class="last">- Recorded and received inventory assets and worked closely with asset management.</li>
-								<li class="last">- Front-runner for multiple important projects.</li>
-								<li class="last"> - Deployed & imaged workstations for refreshes and onboardings.</li>
-								<li class="last">- Established end-user training documentation.</li>
-								</ul>
 							</div>
 
 
