--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
 							</div>
 
 							<div class="job">
+								<h2>Epicenter ERP</h2>
+								<h3>Systems Administrator</h3>
+								<h4>July 2020 - September 2020</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Solo IT technician role with 2 locations to support, including a warehouse with warehouse software/ERP.	</li>
+								<li class="last">- Responsible for any hardware, software, networking, security or data backup issues.</li>
+								<li class="last">- Made security recommendations regarding confidentiality and infrastructure hardening.</li>
+								<li class="last">- Deployed and implemented Mosyle MDM and set up security compliance rules.</li>
+								<li class="last">- Install and configure any networking equipment.</li>
+								<li class="last">- When allotted spare time, studied certifications and Python courses. Built scripts in visual basic for
+									automation of warehouse tasks as well as using screen macros to automate onboarding.</li>
+								</ul>
+							</div>
+
+							<div class="job">
 								<h2>BaytechIT</h2>
 								<h3>Field Services Technician</h3>
 								<h4>November 2018 - July 2020</h4>
@@ -197,7 +213,13 @@
 							<div class="job">
 								<h2>Paragus IT</h2>
 								<h3>Client Support Engineer</h3>
-								<h4>April 2017 - August 2018</h4>
+								<h4>November 2017 - August 2018</h4>
+							</div>
+							
+							<div class="job">
+								<h2>Azaya IT</h2>
+								<h3>Client Support Engineer</h3>
+								<h4>April 2017 - August 2017</h4>
 							</div>
 
 							<div class="job">
