--- a/index.html
+++ b/index.html
@@ -184,13 +184,11 @@
 								<h4>July 2020 - September 2020</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Solo IT technician role with 2 locations to support, including a warehouse with warehouse software/ERP.	</li>
-								<li class="last">- Responsible for any hardware, software, networking, security or data backup issues.</li>
-								<li class="last">- Made security recommendations regarding confidentiality and infrastructure hardening.</li>
-								<li class="last">- Deployed and implemented Mosyle MDM and set up security compliance rules.</li>
-								<li class="last">- Install and configure any networking equipment.</li>
-								<li class="last">- When allotted spare time, studied certifications and Python courses. Built scripts in visual basic for
-									automation of warehouse tasks as well as using screen macros to automate onboarding.</li>
+								<li class="last">- Tier 3 support and triage.</li>
+								<li class="last">- Performed MS-SQL database refreshes.</li>
+								<li class="last">- Developed automated solutions to reoccurring problems using PowerShell or Visual Basic.</li>
+								<li class="last">- Executed routine audits of monitoring software, Datadog.</li>
+								<li class="last">- Deployed non-industry standard software with little documentation.</li>
 								</ul>
 							</div>
 
