--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@
 
 							<div class="job">
 								<h2>Big Fish Games</h2>
-								<h3>Systems Engineer</h3>
+								<h3>Site Reliability Engineer</h3>
 								<h4>January 2022 - Present</h4>
 								<p></p>
 								<ul>
-								<li class="last">- Okta application owner for SAML-integrated and custom integrated apps.</li>
-								<li class="last">- Led the Atlassian governance program and architected solutions based on business requirements.</li>
-								<li class="last">- Project lead and architect for automating the onboarding and offboarding process, reduced onboarding turnaround time from 5 days to same day.</li>
-								<li class="last">- ScrumMaster for daily Agile standups.</li>
-								<li class="last">- Reduced toil and automated solutions via Powershell, Python, and Okta Workflows.</li>
-								<li class="last">- Troubleshooted daily tickets focused on AD account provisioning and Okta permissioning problems.</li>
+								<li class="last">- Spearheaded migration and rewrite of Nagios checks to New Relic, leveraging Bash, Python, and Node.js, facilitating our data center transition.</li>
+								<li class="last">- Orchestrated the development and deployment of Python Webapps for automation via Github Actions, Cloud Build, and Cloud Run on GCP.</li>
+								<li class="last">- Actively mitigated technical debt, and maintained comprehensive, updated documentation.</li>
+								<li class="last">- Developed both technical and non-technical dashboards for game teams, promoting enhanced observability and fostering stronger inter-team relationships.</li>
+								<li class="last">- Conducted weekly demonstrations of work as part of our sprint, emphasizing knowledge sharing for junior technicians.</li>
 								</ul>
 							</div>
 
