--- a/index.html
+++ b/index.html
@@ -133,7 +133,23 @@
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
+							
+							<div class="job">
+								<h2>Gigpro</h2>
+								<h3>Site Reliability Engineer</h3>
+								<h4>January 2022 - Present</h4>
+								<p></p>
+								<ul>
+								<li class="last">- Transformed the startup's initial state of minimal monitoring and alerting into a sophisticated SRE framework leveraging Sentry and New Relic.</li>
+								<li class="last">- Pinpointed critical user experience transactions within the funnel, establishing comprehensive monitoring and insights into their performance.</li>
+								<li class="last">- Managed the product support queue, efficiently categorizing development issues into backlog items when required.</li>
+								<li class="last">- Collaborated with development teams, contributing to full stack development tasks as needed, utilizing a technology stack comprising Django and React Native.</li>
+								<li class="last">- Executed bug resolutions and performance enhancements to maintain optimal application health.</li>
+								<li class="last">- Migrate and modernize analytic tracking events from a dated service to an integrated solution within our backend Django platform.</li>
+								</ul>
+							</div>
 
+							
 							<div class="job">
 								<h2>Big Fish Games</h2>
 								<h3>Site Reliability Engineer</h3>
