--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-	<title>Jordan Bailey | Systems Administrator</title>
+	<title>Jordan Bailey | Site Reliability Engineer</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -23,12 +23,12 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Jordan Bailey</h1>
-					<h2>Systems Engineer</h2>
+					<h2>Site Reliability Engineer</h2>
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<h3>Chicopee, MA</h3>
+						<h3>San Antonio, TX</h3>
 						<h3><a href="mailto:jjbailey1004@gmail.com">Email Me</a></h3>
 						<h3><a href="https://www.linkedin.com/in/jordan-bailey-6968b0b5/">LinkedIn Profile</a></h3>
 						<h3>(413)887-1755</h3>
@@ -137,7 +137,7 @@
 							<div class="job">
 								<h2>Gigpro</h2>
 								<h3>Site Reliability Engineer</h3>
-								<h4>January 2022 - Present</h4>
+								<h4>August 2023 - Present</h4>
 								<p></p>
 								<ul>
 								<li class="last">- Transformed the startup's initial state of minimal monitoring and alerting into a sophisticated SRE framework leveraging Sentry and New Relic.</li>
@@ -153,7 +153,7 @@
 							<div class="job">
 								<h2>Big Fish Games</h2>
 								<h3>Site Reliability Engineer</h3>
-								<h4>January 2022 - Present</h4>
+								<h4>January 2022 - August 2023</h4>
 								<p></p>
 								<ul>
 								<li class="last">- Spearheaded migration and rewrite of Nagios checks to New Relic, leveraging Bash, Python, and Node.js, facilitating our data center transition.</li>
