--- a/index.html
+++ b/index.html
@@ -116,15 +116,11 @@
 
 								<div class="job">
 									<h2>Cloud Resume Challenge</h2>
-									<h3>GitHub Frontend:<a
-											href="https://github.com/jjbailey1004/resume-front-end">GitHub Repo</a></h3>
 									<h3>Original Project Link: <a
 											href="https://cloudresumechallenge.dev/instructions/">Resume Challenge by
 											Forrest Brazeal</a></h3>
 									<h4>November 2022</h4>
-									<p>Building a website from the ground up with a view counter database, APIGW, custom
-										domain, HTTPs Security, Serverless Functions triggered through APIGW written in
-										Python, all packaged into Terraform and utilizing Github Actions for CICD.</p>
+									<p>Designed a serverless web app with Terraform, GCP Cloud Functions, API Gateway, and a Firebase database, tracking visitor counts in real-time. Implemented CI/CD pipelines (GitHub Actions) for automated deployments and infrastructure updates. Enforced HTTPS security and custom domain configurations, ensuring high availability and scalability.</p>
 								</div>
 
 
